# RobotControl2023

./: CMakeLists.txt  README.md  [Model]RB1_500e.tar.xz  package.xml
launch/: rb1_500e.launch
src/: main.cpp  main.h
urdf/: RB1_500e.csv  RB1_500e.urdf
worlds/: rb1_500e.world
